updated tests to use record classes instead