@@ -15,6 +15,7 @@ import java.util.Set;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class PipelineClusterConfigTest {
@@ -26,26 +27,26 @@ class PipelineClusterConfigTest {
         // Create a PipelineGraphConfig for the test
         Map<String, PipelineConfig> pipelines = new HashMap<>();
         Map<String, PipelineStepConfig> steps = new HashMap<>();
-        
+
         JsonConfigOptions customConfig = new JsonConfigOptions("{\"key\": \"value\"}");
         List<KafkaPublishTopic> kafkaPublishTopics = new ArrayList<>();
         kafkaPublishTopics.add(new KafkaPublishTopic("test-output-topic"));
-        
+
         PipelineStepConfig step = new PipelineStepConfig(
                 "test-step",
                 "test-module",
                 customConfig,
-                Arrays.asList("test-input-topic"),
+                List.of("test-input-topic"),
                 kafkaPublishTopics,
-                Arrays.asList("test-grpc-service")
+                List.of("test-grpc-service")
         );
         steps.put("test-step", step);
-        
+
         PipelineConfig pipeline = new PipelineConfig("test-pipeline", steps);
         pipelines.put("test-pipeline", pipeline);
-        
+
         PipelineGraphConfig pipelineGraphConfig = new PipelineGraphConfig(pipelines);
-        
+
         // Create a PipelineModuleMap for the test
         Map<String, PipelineModuleConfiguration> modules = new HashMap<>();
         SchemaReference schemaReference = new SchemaReference("test-schema", 1);
@@ -54,13 +55,13 @@ class PipelineClusterConfigTest {
                 "test-module", 
                 schemaReference);
         modules.put("test-module", module);
-        
+
         PipelineModuleMap pipelineModuleMap = new PipelineModuleMap(modules);
-        
+
         // Create allowed Kafka topics and gRPC services
         Set<String> allowedKafkaTopics = new HashSet<>(Arrays.asList("test-input-topic", "test-output-topic"));
-        Set<String> allowedGrpcServices = new HashSet<>(Arrays.asList("test-grpc-service"));
-        
+        Set<String> allowedGrpcServices = new HashSet<>(List.of("test-grpc-service"));
+
         // Create a PipelineClusterConfig instance
         PipelineClusterConfig config = new PipelineClusterConfig(
                 "test-cluster",
@@ -77,46 +78,46 @@ class PipelineClusterConfigTest {
         PipelineClusterConfig deserialized = objectMapper.readValue(json, PipelineClusterConfig.class);
 
         // Verify the values
-        assertEquals("test-cluster", deserialized.getClusterName());
-        
+        assertEquals("test-cluster", deserialized.clusterName());
+
         // Verify PipelineGraphConfig
-        assertNotNull(deserialized.getPipelineGraphConfig());
-        assertNotNull(deserialized.getPipelineGraphConfig().getPipelines());
-        assertEquals(1, deserialized.getPipelineGraphConfig().getPipelines().size());
-        
+        assertNotNull(deserialized.pipelineGraphConfig());
+        assertNotNull(deserialized.pipelineGraphConfig().pipelines());
+        assertEquals(1, deserialized.pipelineGraphConfig().pipelines().size());
+
         // Verify PipelineModuleMap
-        assertNotNull(deserialized.getPipelineModuleMap());
-        assertNotNull(deserialized.getPipelineModuleMap().getAvailableModules());
-        assertEquals(1, deserialized.getPipelineModuleMap().getAvailableModules().size());
-        
+        assertNotNull(deserialized.pipelineModuleMap());
+        assertNotNull(deserialized.pipelineModuleMap().availableModules());
+        assertEquals(1, deserialized.pipelineModuleMap().availableModules().size());
+
         // Verify allowed Kafka topics and gRPC services
-        assertNotNull(deserialized.getAllowedKafkaTopics());
-        assertEquals(2, deserialized.getAllowedKafkaTopics().size());
-        assertTrue(deserialized.getAllowedKafkaTopics().contains("test-input-topic"));
-        assertTrue(deserialized.getAllowedKafkaTopics().contains("test-output-topic"));
-        
-        assertNotNull(deserialized.getAllowedGrpcServices());
-        assertEquals(1, deserialized.getAllowedGrpcServices().size());
-        assertTrue(deserialized.getAllowedGrpcServices().contains("test-grpc-service"));
+        assertNotNull(deserialized.allowedKafkaTopics());
+        assertEquals(2, deserialized.allowedKafkaTopics().size());
+        assertTrue(deserialized.allowedKafkaTopics().contains("test-input-topic"));
+        assertTrue(deserialized.allowedKafkaTopics().contains("test-output-topic"));
+
+        assertNotNull(deserialized.allowedGrpcServices());
+        assertEquals(1, deserialized.allowedGrpcServices().size());
+        assertTrue(deserialized.allowedGrpcServices().contains("test-grpc-service"));
     }
 
     @Test
-    void testNullHandling() throws Exception {
-        // Create a PipelineClusterConfig instance with null values
-        PipelineClusterConfig config = new PipelineClusterConfig(null, null, null, null, null);
+    void testValidation() {
+        // Test null clusterName validation
+        assertThrows(IllegalArgumentException.class, () -> new PipelineClusterConfig(
+                null, null, null, null, null));
 
-        // Serialize to JSON
-        String json = objectMapper.writeValueAsString(config);
+        // Test blank clusterName validation
+        assertThrows(IllegalArgumentException.class, () -> new PipelineClusterConfig(
+                "", null, null, null, null));
 
-        // Deserialize from JSON
-        PipelineClusterConfig deserialized = objectMapper.readValue(json, PipelineClusterConfig.class);
-
-        // Verify the values
-        assertNull(deserialized.getClusterName());
-        assertNull(deserialized.getPipelineGraphConfig());
-        assertNull(deserialized.getPipelineModuleMap());
-        assertNull(deserialized.getAllowedKafkaTopics());
-        assertNull(deserialized.getAllowedGrpcServices());
+        // Test that other parameters can be null
+        PipelineClusterConfig config = new PipelineClusterConfig(
+                "test-cluster", null, null, null, null);
+        assertNull(config.pipelineGraphConfig());
+        assertNull(config.pipelineModuleMap());
+        assertTrue(config.allowedKafkaTopics().isEmpty());
+        assertTrue(config.allowedGrpcServices().isEmpty());
     }
 
     @Test
@@ -149,41 +150,41 @@ class PipelineClusterConfigTest {
             PipelineClusterConfig config = objectMapper.readValue(is, PipelineClusterConfig.class);
 
             // Verify the values
-            assertEquals("test-cluster", config.getClusterName());
-            
+            assertEquals("test-cluster", config.clusterName());
+
             // Verify PipelineGraphConfig
-            assertNotNull(config.getPipelineGraphConfig());
-            assertNotNull(config.getPipelineGraphConfig().getPipelines());
-            assertEquals(1, config.getPipelineGraphConfig().getPipelines().size());
-            
+            assertNotNull(config.pipelineGraphConfig());
+            assertNotNull(config.pipelineGraphConfig().pipelines());
+            assertEquals(1, config.pipelineGraphConfig().pipelines().size());
+
             // Verify pipeline
-            PipelineConfig pipeline = config.getPipelineGraphConfig().getPipelines().get("pipeline1");
+            PipelineConfig pipeline = config.pipelineGraphConfig().pipelines().get("pipeline1");
             assertNotNull(pipeline);
-            assertEquals("pipeline1", pipeline.getName());
-            assertEquals(2, pipeline.getPipelineSteps().size());
-            
+            assertEquals("pipeline1", pipeline.name());
+            assertEquals(2, pipeline.pipelineSteps().size());
+
             // Verify PipelineModuleMap
-            assertNotNull(config.getPipelineModuleMap());
-            assertNotNull(config.getPipelineModuleMap().getAvailableModules());
-            assertEquals(2, config.getPipelineModuleMap().getAvailableModules().size());
-            
+            assertNotNull(config.pipelineModuleMap());
+            assertNotNull(config.pipelineModuleMap().availableModules());
+            assertEquals(2, config.pipelineModuleMap().availableModules().size());
+
             // Verify module
-            PipelineModuleConfiguration module = config.getPipelineModuleMap().getAvailableModules().get("test-module-1");
+            PipelineModuleConfiguration module = config.pipelineModuleMap().availableModules().get("test-module-1");
             assertNotNull(module);
-            assertEquals("Test Module 1", module.getImplementationName());
-            assertEquals("test-module-1", module.getImplementationId());
-            
+            assertEquals("Test Module 1", module.implementationName());
+            assertEquals("test-module-1", module.implementationId());
+
             // Verify allowed Kafka topics and gRPC services
-            assertNotNull(config.getAllowedKafkaTopics());
-            assertEquals(3, config.getAllowedKafkaTopics().size());
-            assertTrue(config.getAllowedKafkaTopics().contains("test-input-topic-1"));
-            assertTrue(config.getAllowedKafkaTopics().contains("intermediate-topic-1"));
-            assertTrue(config.getAllowedKafkaTopics().contains("test-output-topic-1"));
-            
-            assertNotNull(config.getAllowedGrpcServices());
-            assertEquals(2, config.getAllowedGrpcServices().size());
-            assertTrue(config.getAllowedGrpcServices().contains("test-grpc-service-1"));
-            assertTrue(config.getAllowedGrpcServices().contains("test-grpc-service-2"));
+            assertNotNull(config.allowedKafkaTopics());
+            assertEquals(3, config.allowedKafkaTopics().size());
+            assertTrue(config.allowedKafkaTopics().contains("test-input-topic-1"));
+            assertTrue(config.allowedKafkaTopics().contains("intermediate-topic-1"));
+            assertTrue(config.allowedKafkaTopics().contains("test-output-topic-1"));
+
+            assertNotNull(config.allowedGrpcServices());
+            assertEquals(2, config.allowedGrpcServices().size());
+            assertTrue(config.allowedGrpcServices().contains("test-grpc-service-1"));
+            assertTrue(config.allowedGrpcServices().contains("test-grpc-service-2"));
         }
     }
 }
