@@ -5,14 +5,13 @@ import org.junit.jupiter.api.Test;
 
 import java.io.InputStream;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class PipelineConfigTest {
@@ -23,22 +22,22 @@ class PipelineConfigTest {
     void testSerializationDeserialization() throws Exception {
         // Create a map of PipelineStepConfig instances
         Map<String, PipelineStepConfig> steps = new HashMap<>();
-        
+
         // Create a step for the map
         JsonConfigOptions customConfig = new JsonConfigOptions("{\"key\": \"value\"}");
         List<KafkaPublishTopic> kafkaPublishTopics = new ArrayList<>();
         kafkaPublishTopics.add(new KafkaPublishTopic("test-output-topic"));
-        
+
         PipelineStepConfig step = new PipelineStepConfig(
                 "test-step",
                 "test-module",
                 customConfig,
-                Arrays.asList("test-input-topic"),
+                List.of("test-input-topic"),
                 kafkaPublishTopics,
-                Arrays.asList("test-grpc-service")
+                List.of("test-grpc-service")
         );
         steps.put("test-step", step);
-        
+
         // Create a PipelineConfig instance
         PipelineConfig config = new PipelineConfig("test-pipeline", steps);
 
@@ -49,59 +48,56 @@ class PipelineConfigTest {
         PipelineConfig deserialized = objectMapper.readValue(json, PipelineConfig.class);
 
         // Verify the values
-        assertEquals("test-pipeline", deserialized.getName());
-        assertNotNull(deserialized.getPipelineSteps());
-        assertEquals(1, deserialized.getPipelineSteps().size());
-        
-        PipelineStepConfig deserializedStep = deserialized.getPipelineSteps().get("test-step");
+        assertEquals("test-pipeline", deserialized.name());
+        assertNotNull(deserialized.pipelineSteps());
+        assertEquals(1, deserialized.pipelineSteps().size());
+
+        PipelineStepConfig deserializedStep = deserialized.pipelineSteps().get("test-step");
         assertNotNull(deserializedStep);
-        assertEquals("test-step", deserializedStep.getPipelineStepId());
-        assertEquals("test-module", deserializedStep.getPipelineImplementationId());
-        assertEquals("{\"key\": \"value\"}", deserializedStep.getCustomConfig().getJsonConfig());
-        assertEquals(1, deserializedStep.getKafkaListenTopics().size());
-        assertEquals("test-input-topic", deserializedStep.getKafkaListenTopics().get(0));
-        assertEquals(1, deserializedStep.getKafkaPublishTopics().size());
-        assertEquals("test-output-topic", deserializedStep.getKafkaPublishTopics().get(0).getTopic());
-        assertEquals(1, deserializedStep.getGrpcForwardTo().size());
-        assertEquals("test-grpc-service", deserializedStep.getGrpcForwardTo().get(0));
+        assertEquals("test-step", deserializedStep.pipelineStepId());
+        assertEquals("test-module", deserializedStep.pipelineImplementationId());
+        assertEquals("{\"key\": \"value\"}", deserializedStep.customConfig().jsonConfig());
+        assertEquals(1, deserializedStep.kafkaListenTopics().size());
+        assertEquals("test-input-topic", deserializedStep.kafkaListenTopics().getFirst());
+        assertEquals(1, deserializedStep.kafkaPublishTopics().size());
+        assertEquals("test-output-topic", deserializedStep.kafkaPublishTopics().getFirst().topic());
+        assertEquals(1, deserializedStep.grpcForwardTo().size());
+        assertEquals("test-grpc-service", deserializedStep.grpcForwardTo().getFirst());
     }
 
     @Test
-    void testNullHandling() throws Exception {
-        // Create a PipelineConfig instance with null values
-        PipelineConfig config = new PipelineConfig(null, null);
+    void testValidation() {
+        // Test null name validation
+        assertThrows(IllegalArgumentException.class, () -> new PipelineConfig(null, Map.of()));
 
-        // Serialize to JSON
-        String json = objectMapper.writeValueAsString(config);
+        // Test blank name validation
+        assertThrows(IllegalArgumentException.class, () -> new PipelineConfig("", Map.of()));
 
-        // Deserialize from JSON
-        PipelineConfig deserialized = objectMapper.readValue(json, PipelineConfig.class);
-
-        // Verify the values
-        assertNull(deserialized.getName());
-        assertNull(deserialized.getPipelineSteps());
+        // Test null pipelineSteps handling (should not throw, converts to empty map)
+        PipelineConfig config = new PipelineConfig("test-pipeline", null);
+        assertTrue(config.pipelineSteps().isEmpty());
     }
 
     @Test
     void testJsonPropertyNames() throws Exception {
         // Create a map of PipelineStepConfig instances
         Map<String, PipelineStepConfig> steps = new HashMap<>();
-        
+
         // Create a step for the map
         JsonConfigOptions customConfig = new JsonConfigOptions("{\"key\": \"value\"}");
         List<KafkaPublishTopic> kafkaPublishTopics = new ArrayList<>();
         kafkaPublishTopics.add(new KafkaPublishTopic("test-output-topic"));
-        
+
         PipelineStepConfig step = new PipelineStepConfig(
                 "test-step",
                 "test-module",
                 customConfig,
-                Arrays.asList("test-input-topic"),
+                List.of("test-input-topic"),
                 kafkaPublishTopics,
-                Arrays.asList("test-grpc-service")
+                List.of("test-grpc-service")
         );
         steps.put("test-step", step);
-        
+
         // Create a PipelineConfig instance
         PipelineConfig config = new PipelineConfig("test-pipeline", steps);
 
@@ -122,34 +118,34 @@ class PipelineConfigTest {
             PipelineConfig config = objectMapper.readValue(is, PipelineConfig.class);
 
             // Verify the values
-            assertEquals("test-pipeline", config.getName());
-            assertNotNull(config.getPipelineSteps());
-            assertEquals(2, config.getPipelineSteps().size());
-            
+            assertEquals("test-pipeline", config.name());
+            assertNotNull(config.pipelineSteps());
+            assertEquals(2, config.pipelineSteps().size());
+
             // Verify first step
-            PipelineStepConfig step1 = config.getPipelineSteps().get("step1");
+            PipelineStepConfig step1 = config.pipelineSteps().get("step1");
             assertNotNull(step1);
-            assertEquals("step1", step1.getPipelineStepId());
-            assertEquals("test-module-1", step1.getPipelineImplementationId());
-            assertEquals("{\"key\": \"value\", \"threshold\": 0.75}", step1.getCustomConfig().getJsonConfig());
-            assertEquals(1, step1.getKafkaListenTopics().size());
-            assertEquals("test-input-topic-1", step1.getKafkaListenTopics().get(0));
-            assertEquals(1, step1.getKafkaPublishTopics().size());
-            assertEquals("intermediate-topic-1", step1.getKafkaPublishTopics().get(0).getTopic());
-            assertEquals(0, step1.getGrpcForwardTo().size());
-            
+            assertEquals("step1", step1.pipelineStepId());
+            assertEquals("test-module-1", step1.pipelineImplementationId());
+            assertEquals("{\"key\": \"value\", \"threshold\": 0.75}", step1.customConfig().jsonConfig());
+            assertEquals(1, step1.kafkaListenTopics().size());
+            assertEquals("test-input-topic-1", step1.kafkaListenTopics().getFirst());
+            assertEquals(1, step1.kafkaPublishTopics().size());
+            assertEquals("intermediate-topic-1", step1.kafkaPublishTopics().getFirst().topic());
+            assertEquals(0, step1.grpcForwardTo().size());
+
             // Verify second step
-            PipelineStepConfig step2 = config.getPipelineSteps().get("step2");
+            PipelineStepConfig step2 = config.pipelineSteps().get("step2");
             assertNotNull(step2);
-            assertEquals("step2", step2.getPipelineStepId());
-            assertEquals("test-module-2", step2.getPipelineImplementationId());
-            assertEquals("{\"key2\": \"value2\", \"limit\": 100}", step2.getCustomConfig().getJsonConfig());
-            assertEquals(1, step2.getKafkaListenTopics().size());
-            assertEquals("intermediate-topic-1", step2.getKafkaListenTopics().get(0));
-            assertEquals(1, step2.getKafkaPublishTopics().size());
-            assertEquals("test-output-topic-1", step2.getKafkaPublishTopics().get(0).getTopic());
-            assertEquals(1, step2.getGrpcForwardTo().size());
-            assertEquals("test-grpc-service-1", step2.getGrpcForwardTo().get(0));
+            assertEquals("step2", step2.pipelineStepId());
+            assertEquals("test-module-2", step2.pipelineImplementationId());
+            assertEquals("{\"key2\": \"value2\", \"limit\": 100}", step2.customConfig().jsonConfig());
+            assertEquals(1, step2.kafkaListenTopics().size());
+            assertEquals("intermediate-topic-1", step2.kafkaListenTopics().getFirst());
+            assertEquals(1, step2.kafkaPublishTopics().size());
+            assertEquals("test-output-topic-1", step2.kafkaPublishTopics().getFirst().topic());
+            assertEquals(1, step2.grpcForwardTo().size());
+            assertEquals("test-grpc-service-1", step2.grpcForwardTo().getFirst());
         }
     }
 }
